--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,5 +1,5 @@
 [package]
-name = "cereal_library"
+name = "cereal_lib"
 version = "0.1.0"
 authors = ["notrodes <reallystupidid@gmail.com>"]
 edition = "2018"
